--- a/projectreports.html
+++ b/projectreports.html
@@ -21,6 +21,7 @@
 			</nav>
 		</div>
 	</header>
+	
 	<div class="container">
 			<center>
 	<embed src="pdf_files/Projects/FEM Project/FEM Project.pdf" width="1200px" height="1200px" />
@@ -30,7 +31,7 @@
 	</div>
 	</center>
 
-				<center>
+	<center>
 	<iframe allowtransparency="true" style="background: #FFFFFF;" 
     src="pdf_files/Projects/FEM Project/index.py" 
     frameborder="0" height="800px" width="100%">
@@ -38,6 +39,43 @@
 	<div class="container">
 		FEA of strip footing-Python Code<br>
 		<a href="pdf_files/Projects/FEM Project/index.py" class="btn btn-github">FEA of strip footing </a>
+	</div>
+	</center>
+	</div>
+	
+	<center>
+	<embed src="pdf_files/Projects/final report.pdf" width="1200px" height="1200px" />
+	<div class="container">
+		Crack detection using Image Processing<br>
+		<a href="pdf_files/Projects/final report.pdf" class="btn btn-github">Crack detection using Image Processing</a>
+	</div>
+	</center>
+	</div>
+
+	<center>
+	<embed src="pdf_files/Projects/final_report.pdf" width="1200px" height="1200px" />
+	<div class="container">
+		Deformation due to thermo-elasticity <br>
+		<a href="pdf_files/Projects/final_report.pdf" class="btn btn-github">Deformation due to thermo-elasticity </a>
+	</div>
+	</center>
+	</div>
+
+	</div>
+	<center>
+	<embed src="pdf_files/Projects/thesis_full.pdf" width="1200px" height="1200px" />
+	<div class="container">
+		LOAD-SETTLEMENT RESPONSE OF SQUARE FOOTING<br>
+		<a href="pdf_files/Projects/thesis_full.pdf" class="btn btn-github">LOAD-SETTLEMENT RESPONSE OF SQUARE FOOTING</a>
+	</div>
+	</center>
+	</div>
+		</div>
+	<center>
+	<embed src="pdf_files/Projects/presentation.pdf" width="1200px" height="1200px" />
+	<div class="container">
+		Stress Distribution in WMM and DBM in PLAXIS 2D<br>
+		<a href="pdf_files/Projects/presentation.pdf" class="btn btn-github">Stress Distribution in WMM and DBM in PLAXIS 2D</a>
 	</div>
 	</center>
 	</div>
