--- a/technicalskills.html
+++ b/technicalskills.html
@@ -21,40 +21,57 @@
 			</nav>
 		</div>
 	</header>
-	<div class="container">
-		<table border="1px solid #fffff">
-			<caption>My education</caption>
-			<tr>
-				<th>School/University</th> <th>GPA</th><th>course</th>
-			</tr>
-			<tr>
-				<td>IIT-Palakkad</td><td>-</td><td>M-Tech, Geotechnical Engg.</td>
-			</tr>
-			<tr>
-				<td>Mahindra École Centrale</td><td>9.20</td><td>Civil Engg.</td>
-			</tr>
-			<tr>
-				<td>Nano Junior college</td><td>93.5</td><td>P.C.M</td>
-			</tr>
-			<tr>
-				<td>K.V.ONGC RJY</td><td>9.4</td><td>Science</td>
-			</tr>
-		</table>
 
 	</div>
 	<div class="container">
-		<h4>Softwares and programming knowledge</h4>
+		<h4>Technical Skills</h4>
 		<ul>
 			<li>AutoCAD</li><br>
+				<center>
+				<embed src="pdf_files/technicalskills/AutoCADCivil3D-DesigningResidentialProjects_CertificateOfCompletion.pdf" width="1200px" height="800px" />
+				<div class="container">
+					AutoCAD civil 3D certification<br>
+					<a href="pdf_files/technicalskills/AutoCADCivil3D-DesigningResidentialProjects_CertificateOfCompletion.pdf" class="btn btn-github">AutoCAD civil 3D certification</a>
+				</div>
+				</center>
 			<li>Fusion360</li><br>
+				<center>
+				<embed src="pdf_files/technicalskills/Fusion360/Simulation.pdf" width="1200px" height="800px" />
+				<div class="container">
+					Fusion 360 Simulation<br>
+					<a href="pdf_files/technicalskills/Fusion360/Simulation.pdf" class="btn btn-github">Fusion 360 Simulation</a>
+				</div>
+				</center>
+
+				<center>
+				<embed src="pdf_files/technicalskills/Fusion360/getting started.pdf" width="1200px" height="800px" />
+				<div class="container">
+					Fusion 360 Modeling<br>
+					<a href="pdf_files/technicalskills/Fusion360/getting started.pdf" class="btn btn-github">Fusion 360 Modeling</a>
+				</div>
+				</center>
 			<li>MATLAB</li><br>
-			<li>Python</li><br>
+			<li>Python3</li><br>
 			<li>Cinema4D</li><br>
-			<li>HTML,CSS</li>
+			<li>HTML,CSS</li><br>
+			<li>Revit</li>
+				<center>
+				<embed src="pdf_files/technicalskills/Revit-StructuralFamilies_CertificateOfCompletion.pdf" width="1200px" height="800px" />
+				<div class="container">
+					Revit Structural Families<br>
+					<a href="pdf_files/technicalskills/Revit-StructuralFamilies_CertificateOfCompletion.pdf" class="btn btn-github">Revit Structural Families</a>
+				</div>
+				</center>
+
+				<center>
+				<embed src="pdf_files/technicalskills/Revit2017EssentialTraining-Structure_CertificateOfCompletion.pdf" width="1200px" height="800px" />
+				<div class="container">
+					Revit Structural Families<br>
+					<a href="pdf_files/technicalskills/Revit2017EssentialTraining-Structure_CertificateOfCompletion.pdf" class="btn btn-github">Revit Structural Families</a>
+				</div>
+				</center>
+			<li>LATEX</li>
 		</ul>
-	</div>
-	<div class="container">
-		<h4>Project</h4>
 	</div>
 </body>
 </html>
